# cuflow

./: CMakeLists.txt  README.md  bootstrap
src/app/: init.cu  instruction.cu  instruction.hh  main.cu  memory.hh  memory.hxx  mode.cu  mode.hh  runtime.cu  runtime.hh  tensor.hh  timer.cu  timer.hh
src/ops/: vadd.cu  vadd.hh
src/ops_cpu/: log_softmax.cu  log_softmax.hh  matmul.cu  matmul.hh  softmax.cu  softmax.hh  softmax_lcost.cu  softmax_lcost.hh  sum.cu  sum.hh  vadd.cu  vadd.hh
src/ops_gpu/: log_softmax.cu  log_softmax.hh  matmul.cu  matmul.hh  softmax.cu  softmax.hh  softmax_lcost.cu  softmax_lcost.hh  sum.cu  sum.hh  vadd.cu  vadd.hh
tests/: check.py  main.py  model.py
